# FreeRTOS-F446re

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
Bsp/: CMakeLists.txt
Bsp/BspUart/: bsp_uart2.c  bsp_uart2.h
Bsp/HardwareUtils/: brd_HWU.c  brd_HWU.h
F4Board/: system_stm32f4xx.c
F4Board/Middlewares/: CMakeLists.txt
F4Board/NucleoF446/: STM32F446RETX_FLASH.ld
F4gCore/: CMakeLists.txt
F4gCore/GPIO/: gpio.c  gpio.h
F4gCore/Inc/: f4gCore.h
F4gCore/Interrupt/: gpio_intrpt.c  uart_intrpt.c
F4gCore/Interrupt/Inc/: intrpt.h
F4gCore/TIMER/: delay.c  delay.h
F4gCore/UART/: uart.c  uartCB.c
F4gCore/UART/Inc/: uart.h  uartCB.h  uartShared.h
Inc/: FreeRTOSConfig.h  config.h  main.h  mcuMap.h  stm32_assert.h  stm32f4xx_hal_conf.h  sysGlob.h
Src/: freertos_hooks.c  main.c  system_initialization.c
Utilities/: CMakeLists.txt
Utilities/DataStructure/CircularBuffer/: circBuff.c  circBuff.h
Utilities/genUtilis/: gUtilis.h
